--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.2",
         "illuminate/contracts": "^10.0 || ^11.0",
+        "illuminate/support": "^10.0 || ^11.0",
         "saloonphp/saloon": "^3.0",
         "spatie/laravel-package-tools": "^1.14.0"
     },
